# Live-Air-Quality

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py
notebooks/: api-exploration.ipynb  trails-s3-exploration.ipynb
research/: api-exploration.ipynb  testing-01-database-manager.ipynb  testing-02-dashboard-app.ipynb  testing-06-dashboard-app.ipynb  trails-02-s3-exploration.ipynb  trails-04-sql.ipynb  trails-05-dashboard-app.ipynb  trails-api-exploration.ipynb  trails-dashboard-app.ipynb  trails-s3-exploration.ipynb  trails-sql.ipynb  trials-data-check.ipynb
research/data/: sensor_locations.json
research/sql/: air_quality.db
research/trials/: trails-01-api-exploration.ipynb  trails-03-data-check.ipynb  trails-05-dashboard-app.ipynb
src/AQI/sql/ddl/: 001_create_schemas.sql  002_create_raw_tables.sql  003_create_raw_metadata_logs.sql  create_raw_tables.sql
src/AQI/sql/dml/: 010_insert_measurements.sql
src/AQI/sql/presentation/: 100_view_air_quality.sql  101_view_lastest_data.sql  102_view_air_quality_stats.sql
src/AQI/utils/: common.py  logger.py  tensorflow_model.py
