[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AQI"
version = "0.0.1"
authors = [
    { name="Vish501" }
]
description = "AQI Package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Vish501/Live-Air-Quality"
Issues = "https://github.com/Vish501/Live-Air-Quality/issues"
